--- a/WEB/docker-compose.yml
+++ b/WEB/docker-compose.yml
@@ -51,32 +51,32 @@ services:
         ipv4_address:
           172.18.0.17
   #######################################
-#  illust_customer_front:
-#   container_name: illust_customer_front_con
-#   build:
-#     context: .
-#     dockerfile: Front/illust_customer/Dockerfile
-#   ports:
-#     - 8006:80
-#   networks:
-#     clonet_network:
-#       ipv4_address: 172.18.0.8
-#
-#  illust_customer_back:
-#    container_name: illust_customer_back_con
-#    build:
-#     context: .
-#     dockerfile: Back/Illust_Customer/Dockerfile
-#     args:
-#       JAR_FILE: ./Back/Illust_Customer/build/libs/*.jar
-#    ports:
-#     - 8086:8086
-#    depends_on :
-#     - kafka
-#     - zookeeper
-#    networks:
-#     clonet_network:
-#       ipv4_address: 172.18.0.18
+  illust_customer_front:
+   container_name: illust_customer_front_con
+   build:
+     context: .
+     dockerfile: Front/illust_customer/Dockerfile
+   ports:
+     - 8006:80
+   networks:
+     clonet_network:
+       ipv4_address: 172.18.0.8
+
+  illust_customer_back:
+    container_name: illust_customer_back_con
+    build:
+     context: .
+     dockerfile: Back/Illust_Customer/Dockerfile
+     args:
+       JAR_FILE: ./Back/Illust_Customer/build/libs/*.jar
+    ports:
+     - 8086:8086
+    depends_on :
+     - kafka
+     - zookeeper
+    networks:
+     clonet_network:
+       ipv4_address: 172.18.0.18
   ########################################
   illust_select_user_front:
     container_name: illust_select_user_front_con
